[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/topdown-shooter/Tilesheet/tilesheet_complete.png" type="Texture" id=1]
[ext_resource path="res://Base.gd" type="Script" id=2]
[ext_resource path="res://Sounds/death_bell_sound_effect.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=110]
extents = Vector2( 172, 110 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 1 )
region = Rect2( 1230, 718, 36, 36 )

[node name="Base" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 204, 122 )
shape = SubResource( 110 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 200, 120 )
scale = Vector2( 1.77195, 1.77623 )
texture = SubResource( 111 )

[node name="BaseTimer" type="Timer" parent="."]
wait_time = 90.0

[node name="CaputreBaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_Base_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Base_body_exited"]
[connection signal="timeout" from="BaseTimer" to="." method="_on_BaseTimer_timeout"]
